--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,10 @@ jobs:
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
+	- name: build calc
+      run: go build -v ./calc.go
+    - name: build echo
+      run: go build -v ./echo.go
     - name: Test
       run: go test -v ./...
   super-lint:
