--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-    name: Build
+    name: Build and lint
     runs-on: ubuntu-latest
     steps:
 
@@ -34,17 +34,19 @@ jobs:
       run: go build -v ./echo.go
     - name: build searchSimple
       run: go build -v ./searchSimple.go
-  super-lint:
-    name: Lint source code
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_GO: true
+    - name: lint
+      run: ls *.go | xargs -I {} go vet {}
+#  super-lint:
+#    name: Lint source code
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Run Super-Linter
+#        uses: github/super-linter@v3
+#        env:
+#          DEFAULT_BRANCH: main
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          VALIDATE_GO: true
