--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,7 @@ jobs:
     - name: test
       run: cd csv-parser/ && go test -v . && go test -v parse/*
     - name: vet
-      run: cd csv-parser/ && find .  -iname "*.go" | xargs -I {} go vet {}
+      run: cd csv-parser/ && go vet *.go && go vet parse/* && go vet log/* && go vet check/*
   super-lint:
     name: Lint source code
     runs-on: ubuntu-latest
