--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
             dep ensure
         fi
     - name: build 
-      run: make build
+      run:  cd csv-parser/ && make build
     - name: test
       run: make test
     - name: vet
